# Tater

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.nvidia  README.md  RELEASE_NOTES_v53.md  YouTube.py  admin_gate.py  agent_lab_registry.py  announcement_targets.py  category_device_control.py  cerberus.py  conversation_artifacts.py  conversation_media_refs.py  core_registry.py  core_tools.py  discord_bot.py  discord_control.py  docker-compose.nvidia.yml  docker-compose.yml  embed.py  emoji_responder.py  entrypoint.sh  env-example  ha_ws.py  helpers.py  hydra_core_extensions.py  image.py  integration_registry.py  integration_runtime.py  kernel_tools.py  latest_image_ref.py  little_spud_home.py  lmstudio_gemma3.jinja  main.py  media_playback.py  memory_platform_store.py  notify_queue.py  people.py  (+48 more)
.streamlit/: # config.toml  config.toml
Prompt-Templates/: LMStudio
cerberus/: __init__.py  cerberus_checker.py  cerberus_common_helpers.py  cerberus_contracts.py  cerberus_doer_state.py  cerberus_execution.py  cerberus_followup_intents.py  cerberus_ledger.py  cerberus_limits.py  cerberus_memory_context.py  cerberus_multi_intent_builder.py  cerberus_overclar_repair.py  cerberus_preamble_utils.py  cerberus_prompts.py  cerberus_retry_helpers.py  cerberus_scope.py  cerberus_state_store.py  cerberus_tool_index.py  cerberus_toolcall_utils.py  cerberus_turn_classifiers.py  cerberus_validation.py  cerberus_validation_flow.py
esphome/: device_runtime.py  display_bus.py  display_feed.py  emotion_id.py  firmware.py  home.py  intercom.py  nanowakeword_engine.py  openwakeword_engine.py  reply_playback.py  runtime.py  settings.py  speaker_id.py  ui_helpers.py
examples/: env-example  plugin-template.py
hydra/: __init__.py  hydra_checker.py  hydra_common_helpers.py  hydra_doer_state.py  hydra_execution.py  hydra_ledger.py  hydra_memory_context.py  hydra_origin_attach.py  hydra_prompts.py  hydra_retry_helpers.py  hydra_runtime_config.py  hydra_scope.py  hydra_state_core.py  hydra_state_store.py  hydra_tool_index.py  hydra_toolcall_utils.py  hydra_turn_utils.py  hydra_validation.py  hydra_validation_flow.py  hydra_web_research.py
integrations/: __init__.py  aladdin.py  homeassistant.py  homekit.py  (+6 more)
(+178 files in other folders)
